--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap');
-
+html {
+    scroll-behavior: smooth;
+  }
 
 body{
     position: relative;
@@ -100,4 +102,9 @@ body{
 
 #airplane{
     font-size: 80px;
+}
+
+.card{
+    width: 18rem;
+    height: 32rem;
 }
